My Home Projects

--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,53 @@ body {
 .info h3:hover {
     color: var(--primary-color); /* Or any desired hover color */
 }
+.neon-ring {
+    box-shadow: 0 0 8px rgb(240, 171, 142), 0 0 16px rgb(240, 171, 142), 0 0 24px rgb(240, 171, 142), 0 0 40px rgb(240, 171, 142);
+  }
+ /* Add this CSS to your global styles */
+@keyframes neonPulse {
+    0%, 100% {
+      box-shadow: 0 0 10px rgb(240, 171, 142), 0 0 20px rgb(240, 171, 142), 0 0 30px rgb(240, 171, 142);
+    }
+    50% {
+      box-shadow: 0 0 20px rgb(240, 171, 142), 0 0 40px rgb(240, 171, 142), 0 0 60px rgb(240, 171, 142);
+    }
+  }
+  
+  .neon-ring {
+    animation: neonPulse 1.3s infinite ease-in-out;
+  }
+
+  /* Calendar tweaks to make it compact vertically */
+.calendar-custom {
+  width: 100% !important;
+  border: none;
+}
+
+.calendar-custom .react-calendar__month-view__weekdays {
+  font-size: 0.75rem;
+}
+
+.calendar-custom .react-calendar__tile {
+  padding: 6px 0;
+  font-size: 0.75rem;
+}
+
+.text-navy {
+  color: #001f3f; /* Navy Blue */
+}
+
+.invalid-feedback {
+  color: red;
+  font-size: 0.8rem;
+  margin-top: 0.25rem;
+}
+.was-validated input:invalid {
+  border: 2px solid red;
+}
+
+.was-validated input:valid {
+  border: 2px solid green;
+}
+
+  
